--- a/packages/design-tokens/variables.scss
+++ b/packages/design-tokens/variables.scss
@@ -63,9 +63,10 @@
   --z-index-dropdown: 1000;
   --z-index-sticky: 1020;
   --z-index-sidenav: 1030;
-  --z-index-header: 1040;
-  --z-index-feedback: 1050;
-  --z-index-fixed: 1060;
-  --z-index-modal: 1070;
-  --z-index-tooltip: 1080;
+  --z-index-bottom-header: 1040;
+  --z-index-header: 1050;
+  --z-index-feedback: 1060;
+  --z-index-fixed: 1070;
+  --z-index-modal: 1080;
+  --z-index-tooltip: 1090;
 }
